aswin-home/src/app/styles/globals.scss
//
// Import Bootstrap
//

@import "bootstrap/scss/bootstrap";


//
// Import Bootstrap Icons w/ custom path to fonts folder
//

// $bootstrap-icons-font-dir: "../node_modules/bootstrap-icons/font/fonts";
@import "bootstrap-icons/font/bootstrap-icons";
@import "theme.scss";


body {
    min-width: 310px;
    color: var(--text-color);
}


/** Components **/
/** ========== **/

a, .clickable {
    text-decoration: none;
    color:var(--text-color-emph);
    opacity: 0.85;
}

h1 {
    font-size: 3em;
    font-weight: 800;
    text-align: center;
}

h2 {
    font-weight: 700;
}

a:hover, 
a:active
.clickable:hover,
.clickable:active {
    opacity: 1;
    font-weight: 500;
}

.button {
    background-color: var(--bg-color);
    vertical-align: middle;
    border-radius: 0.3em;
    padding: 0.6em;
    padding-top: 0.8em;
    margin-right: 0.4em;
    display: inline;
    border: none;
    max-width: 15em;
}

.button:hover, 
.button:focus {
    background-color: var(--button-bg-color);
    color: var(--button-text-color);
}

.display-pic img {
    border-radius: 100%;
}

@media (prefers-color-scheme: dark) {

    body {
        color: #a8a8a8;
        background-color: #1e1e1e;
        letter-spacing: -0.03em;
    }

    a, .clickable {
        text-decoration: none;
        color:#b8b6b6;
        opacity: 0.85;
    }

    .button.adaptive {
        background-color: #2a2a2a;
    }
    
    .button.adaptive:hover, 
    .button.adaptive:focus {
        background-color: #222222;
        color: #b3b2b2;
    }

    .footer.adaptive {
        background-color: #151515;
        color: #fefefe;
    }
}

/** For large screens **/
@media only screen and (min-width: 700px) {
    h1 {
        text-align: left;
    }
}

// page specific CSS
@import 'header.scss';
@import 'about.scss';
@import 'affiliations.scss';
@import 'footer.scss';
@import 'about-me.scss';

